@@ -1,0 +1,15 @@
+package de.berlios.sventon.util;
+
+import junit.framework.TestCase;
+
+public class ZipUtilsTest extends TestCase {
+
+  public void testZipUtils() throws Exception {
+    try {
+      new ZipUtils(null);
+      fail("Should throw IllegalArgumentException");
+    } catch (Exception e) {
+      // expected
+    }
+  }
+}
