@@ -1,6 +1,12 @@
 sventon change history
 -----------------------------------------------------------------------------------------
 
+[836] Release 1.2 RC2 (2007-05-18)
+[834] Added: Feature #3348 - Fix sort order in the instance list.
+[832] Fixed: Bug #10991 - ZIP download does not support non USASCII.
+[829] Fixed: Bug #10920 - Could not update cache instance.
+
+[825] Release 1.2 RC1 (2007-04-03)
 [809] Added: Feature #2939 - Store cache files gzipped.
 [808] Added: Feature #3089 - context sensitive feeds.
 [798] Added: Upgraded to SVNKit 1.1.1.
